--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "twbs/bootstrap": "^3.3",
         "eonasdan/bootstrap-datetimepicker": "^4.17",
         "symfony/var-dumper": "^2.8",
-        "liuggio/excelbundle": "^2.1"
+        "liuggio/excelbundle": "^2.1",
+        "components/jquery": "^3.6"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
